--- a/mychart/templates/service.yaml
+++ b/mychart/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mychart.fullname" . }}
-  labels:
-    {{- include "mychart.labels" . | nindent 4 }}
+  name: test-k8s-service
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "mychart.selectorLabels" . | nindent 4 }}
+    app: test-k8s
+  type: NodePort
+  ports:
+    - port: 80        # 本 Service 的端口
+      targetPort: 80  # 容器端口
+      nodePort: 30000
+      protocol: TCP
